src/objects/Subtask__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PlanTime__c</fullName>
        <label>PlanTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Subtasks</relationshipLabel>
        <relationshipName>Subtasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SpendTime__c</fullName>
        <label>SpendTime</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Subtasks</relationshipLabel>
        <relationshipName>Subtasks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>in progress</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Subtask</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subtask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subtasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>